--- a/src/bibliographie.test.tex
+++ b/src/bibliographie.test.tex
@@ -1,9 +1,9 @@
 \cleardoublepage
 
-\chapter*{Conclusion}
+\chapter*{Bibliographie}
 
-\addcontentsline{toc}{chapter}{Conclusion}
-\markboth{Conclusion}{}
+\addcontentsline{toc}{chapter}{Bibliographie}
+\markboth{Bibliographie}{}
 
 
 
