--- a/src/en_tete-pied_de_page.tex
+++ b/src/en_tete-pied_de_page.tex
@@ -1,3 +1,6 @@
+\usepackage{fancyhdr}
+\pagestyle{fancyplain}
+
 \makeatletter % début d'utilisation des variables @
 
 
@@ -69,6 +72,39 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%% Encadrement du rapport (hors page de chapitre) %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\fancypagestyle{encadrement}{
+	% Effacer les valeurs par défaut
+	\fancyhf{}
+	
+	% Remplissage
+	\lhead	[\large \bf \thepage]				% haut	gauche	pair	:	numéro de page
+			{\large \bf \nouppercase \leftmark}	% haut	gauche	impair	:	nom du chapitre
+	\chead	[]									% haut	centre	pair
+			{}									% haut	centre	impair
+	\rhead	[\large \bf \nouppercase \leftmark]	% haut	droite	pair	:	nom du chapitre
+			{\large \bf \thepage}				% haut	droite	impair	:	numéro de page
+	\lfoot	[\@title]							% bas	gauche	pair	:	titre du rapport
+			{\@author}							% bas	gauche	impair	:	auteur du rapport
+	\cfoot	[]									% bas	centre	pair
+			{}									% bas	centre	impair
+	\rfoot	[\@author]							% bas	droite	pair	:	auteur du rapport
+			{\@title}							% bas	droite	impair	:	titre du rapport
+	
+	% Epaisseur de la ligne séparatrice
+	\renewcommand{\headrulewidth}{0.4 pt}		% en-tête (défaut : 0.4pt)
+	\renewcommand{\footrulewidth}{0.4 pt}		% pied de page (défaut : 0pt)
+	
+	% Distance du corps
+	\headsep = 25 pt							% en-tête (défaut : 25pt)
+	\footskip = 75 pt							% pied de page (défaut : 30pt)
+}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% Corps du rapport (hors page de chapitre) %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -131,6 +167,7 @@
 	\headsep = 25 pt						% en-tête (défaut : 25pt)
 	\footskip = 75 pt						% pied de page (défaut : 30pt)
 }
+
 
 
 \makeatother % fin d'utilisation des variables @
