--- a/src/page_de_garde.tex
+++ b/src/page_de_garde.tex
@@ -11,10 +11,10 @@
 		%%%%% Haut-Gauche %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	
-		% Logo école
+		% Logo
 		\includegraphics[scale=0.09]{img/ISIMA_logo.png}					\\
 		
-		% Nom école
+		% Nom
 		\textbf{I}nstitut \textbf{S}upérieur								\\
 		d'\textbf{I}nformatique, de											\\
 		\textbf{M}odélisation et de											\\
@@ -22,7 +22,7 @@
 		
 		\vspace*{0.5cm}
 		
-		% Adresse école
+		% Adresse
 		BP 10125															\\
 		63173 Aubière Cedex
 		
@@ -35,6 +35,20 @@
 		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		%%%%% Haut-Droite %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+		
+		% Logo
+		\includegraphics[scale=0.07]{img/SopraGroupe_Logo.png}				\\
+		
+		% Nom
+		Sopra Groupe
+		
+		\vspace*{0.5cm}
+		
+		% Adresse
+		Parc Technologique de la Pardieu									\\
+		Immeuble Vision II													\\
+		3 Allée Pierre de Fermat											\\
+		63170 Aubiere		
 		
 		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		
@@ -52,9 +66,8 @@
 	% Informations
 	\Large
 	Rapport d'ingénieur													\\
-	Projet de 3\up{ème} année											\\
-	\textit{Filière :} Génie Logiciel et Systèmes Informatiques			\\
-	\textit{Filière :} Réseaux et Télécommunications
+	Stage de 3\up{ème} année											\\
+	\textit{Filière :} Génie Logiciel et Systèmes Informatiques
 	
 	\rule{16cm}{2pt}													\\
 	\vspace*{0.35cm}
@@ -85,7 +98,7 @@
 			\textit{Présenté par :} \@author
 		\end{minipage}
 		
-		\mbox{\textit{Sous la direction de :} Loïc YON}
+		\mbox{\textit{Sous la direction de :} Claude MAZEL}
 		
 		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		
