--- a/src/remerciements.test.tex
+++ b/src/remerciements.test.tex
@@ -1,9 +1,10 @@
 \cleardoublepage
 
-\chapter*{Conclusion}
+\chapter*{Remerciements}
 
-\addcontentsline{toc}{chapter}{Conclusion}
-\markboth{Conclusion}{}
+\addcontentsline{toc}{chapter}{Remerciements}
+\markboth{Remerciements}{}
+%\thispagestyle{empty}
 
 
 
