--- a/src/remerciements.tex
+++ b/src/remerciements.tex
@@ -1,6 +1,10 @@
+\cleardoublepage
+
 \chapter*{Remerciements}
 
-\thispagestyle{empty}
+\addcontentsline{toc}{chapter}{Remerciements}
+\markboth{Remerciements}{}
+
 
 
 bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla.
