--- a/src/annexe.tex
+++ b/src/annexe.tex
@@ -1,9 +1,9 @@
 \cleardoublepage
 
-\chapter*{Conclusion}
+\chapter*{Annexe}
 
-\addcontentsline{toc}{chapter}{Conclusion}
-\markboth{Conclusion}{}
+\addcontentsline{toc}{chapter}{Annexe}
+\markboth{Annexe}{}
 
 
 
