--- a/src/partie_2.tex
+++ b/src/partie_2.tex
@@ -1,169 +1,28 @@
 \cleardoublepage
 
-\chapter{Chapter 2}
+\chapter{Conception de la solution}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\section{Technologies utilisées}
 
-\section{Section 2.1}
-\subsection{SubSection 2.1.1}
-\subsubsection{SubSubSection 2.1.1.1}
-\subsubsection{SubSubSection 2.1.1.2}
-\subsubsection{SubSubSection 2.1.1.3}
-\subsubsection{SubSubSection 2.1.1.4}
-\subsubsection{SubSubSection 2.1.1.5}
-\subsection{SubSection 2.1.2}
-\subsubsection{SubSubSection 2.1.2.1}
-\subsubsection{SubSubSection 2.1.2.2}
-\subsubsection{SubSubSection 2.1.2.3}
-\subsubsection{SubSubSection 2.1.2.4}
-\subsubsection{SubSubSection 2.1.2.5}
-\subsection{SubSection 2.1.3}
-\subsubsection{SubSubSection 2.1.3.1}
-\subsubsection{SubSubSection 2.1.3.2}
-\subsubsection{SubSubSection 2.1.3.3}
-\subsubsection{SubSubSection 2.1.3.4}
-\subsubsection{SubSubSection 2.1.3.5}
-\subsection{SubSection 2.1.4}
-\subsubsection{SubSubSection 2.1.4.1}
-\subsubsection{SubSubSection 2.1.4.2}
-\subsubsection{SubSubSection 2.1.4.3}
-\subsubsection{SubSubSection 2.1.4.4}
-\subsubsection{SubSubSection 2.1.4.5}
-\subsection{SubSection 2.1.5}
-\subsubsection{SubSubSection 2.1.5.1}
-\subsubsection{SubSubSection 2.1.5.2}
-\subsubsection{SubSubSection 2.1.5.3}
-\subsubsection{SubSubSection 2.1.5.4}
-\subsubsection{SubSubSection 2.1.5.5}
-\section{Section 2.2}
-\subsection{SubSection 2.2.1}
-\subsubsection{SubSubSection 2.2.1.1}
-\subsubsection{SubSubSection 2.2.1.2}
-\subsubsection{SubSubSection 2.2.1.3}
-\subsubsection{SubSubSection 2.2.1.4}
-\subsubsection{SubSubSection 2.2.1.5}
-\subsection{SubSection 2.2.2}
-\subsubsection{SubSubSection 2.2.2.1}
-\subsubsection{SubSubSection 2.2.2.2}
-\subsubsection{SubSubSection 2.2.2.3}
-\subsubsection{SubSubSection 2.2.2.4}
-\subsubsection{SubSubSection 2.2.2.5}
-\subsection{SubSection 2.2.3}
-\subsubsection{SubSubSection 2.2.3.1}
-\subsubsection{SubSubSection 2.2.3.2}
-\subsubsection{SubSubSection 2.2.3.3}
-\subsubsection{SubSubSection 2.2.3.4}
-\subsubsection{SubSubSection 2.2.3.5}
-\subsection{SubSection 2.2.4}
-\subsubsection{SubSubSection 2.2.4.1}
-\subsubsection{SubSubSection 2.2.4.2}
-\subsubsection{SubSubSection 2.2.4.3}
-\subsubsection{SubSubSection 2.2.4.4}
-\subsubsection{SubSubSection 2.2.4.5}
-\subsection{SubSection 2.2.5}
-\subsubsection{SubSubSection 2.2.5.1}
-\subsubsection{SubSubSection 2.2.5.2}
-\subsubsection{SubSubSection 2.2.5.3}
-\subsubsection{SubSubSection 2.2.5.4}
-\subsubsection{SubSubSection 2.2.5.5}
-\section{Section 2.3}
-\subsection{SubSection 2.3.1}
-\subsubsection{SubSubSection 2.3.1.1}
-\subsubsection{SubSubSection 2.3.1.2}
-\subsubsection{SubSubSection 2.3.1.3}
-\subsubsection{SubSubSection 2.3.1.4}
-\subsubsection{SubSubSection 2.3.1.5}
-\subsection{SubSection 2.3.2}
-\subsubsection{SubSubSection 2.3.2.1}
-\subsubsection{SubSubSection 2.3.2.2}
-\subsubsection{SubSubSection 2.3.2.3}
-\subsubsection{SubSubSection 2.3.2.4}
-\subsubsection{SubSubSection 2.3.2.5}
-\subsection{SubSection 2.3.3}
-\subsubsection{SubSubSection 2.3.3.1}
-\subsubsection{SubSubSection 2.3.3.2}
-\subsubsection{SubSubSection 2.3.3.3}
-\subsubsection{SubSubSection 2.3.3.4}
-\subsubsection{SubSubSection 2.3.3.5}
-\subsection{SubSection 2.3.4}
-\subsubsection{SubSubSection 2.3.4.1}
-\subsubsection{SubSubSection 2.3.4.2}
-\subsubsection{SubSubSection 2.3.4.3}
-\subsubsection{SubSubSection 2.3.4.4}
-\subsubsection{SubSubSection 2.3.4.5}
-\subsection{SubSection 2.3.5}
-\subsubsection{SubSubSection 2.3.5.1}
-\subsubsection{SubSubSection 2.3.5.2}
-\subsubsection{SubSubSection 2.3.5.3}
-\subsubsection{SubSubSection 2.3.5.4}
-\subsubsection{SubSubSection 2.3.5.5}
-\section{Section 2.4}
-\subsection{SubSection 2.4.1}
-\subsubsection{SubSubSection 2.4.1.1}
-\subsubsection{SubSubSection 2.4.1.2}
-\subsubsection{SubSubSection 2.4.1.3}
-\subsubsection{SubSubSection 2.4.1.4}
-\subsubsection{SubSubSection 2.4.1.5}
-\subsection{SubSection 2.4.2}
-\subsubsection{SubSubSection 2.4.2.1}
-\subsubsection{SubSubSection 2.4.2.2}
-\subsubsection{SubSubSection 2.4.2.3}
-\subsubsection{SubSubSection 2.4.2.4}
-\subsubsection{SubSubSection 2.4.2.5}
-\subsection{SubSection 2.4.3}
-\subsubsection{SubSubSection 2.4.3.1}
-\subsubsection{SubSubSection 2.4.3.2}
-\subsubsection{SubSubSection 2.4.3.3}
-\subsubsection{SubSubSection 2.4.3.4}
-\subsubsection{SubSubSection 2.4.3.5}
-\subsection{SubSection 2.4.4}
-\subsubsection{SubSubSection 2.4.4.1}
-\subsubsection{SubSubSection 2.4.4.2}
-\subsubsection{SubSubSection 2.4.4.3}
-\subsubsection{SubSubSection 2.4.4.4}
-\subsubsection{SubSubSection 2.4.4.5}
-\subsection{SubSection 2.4.5}
-\subsubsection{SubSubSection 2.4.5.1}
-\subsubsection{SubSubSection 2.4.5.2}
-\subsubsection{SubSubSection 2.4.5.3}
-\subsubsection{SubSubSection 2.4.5.4}
-\subsubsection{SubSubSection 2.4.5.5}
-\section{Section 2.5}
-\subsection{SubSection 2.5.1}
-\subsubsection{SubSubSection 2.5.1.1}
-\subsubsection{SubSubSection 2.5.1.2}
-\subsubsection{SubSubSection 2.5.1.3}
-\subsubsection{SubSubSection 2.5.1.4}
-\subsubsection{SubSubSection 2.5.1.5}
-\subsection{SubSection 2.5.2}
-\subsubsection{SubSubSection 2.5.2.1}
-\subsubsection{SubSubSection 2.5.2.2}
-\subsubsection{SubSubSection 2.5.2.3}
-\subsubsection{SubSubSection 2.5.2.4}
-2.5.2.4
-\subsubsection{SubSubSection 2.5.2.5}
-2.5.2.5
-\subsection{SubSection 2.5.3}
-2.5.3
-\subsubsection{SubSubSection 2.5.3.1}
-2.5.3.1
-\subsubsection{SubSubSection 2.5.3.2}
-2.5.3.2
-\subsubsection{SubSubSection 2.5.3.3}
-2.5.3.3
-\subsubsection{SubSubSection 2.5.3.4}
-2.5.3.4
-\subsubsection{SubSubSection 2.5.3.5}
-2.5.3.5
-\subsection{SubSection 2.5.5}
-2.5.5
-\subsubsection{SubSubSection 2.5.5.1}
-2.5.5.1
-\subsubsection{SubSubSection 2.5.5.2}
-2.5.5.2
-\subsubsection{SubSubSection 2.5.5.3}
-2.5.5.3
-\subsubsection{SubSubSection 2.5.5.4}
-2.5.5.4
-\subsubsection{SubSubSection 2.5.5.5}
-2.5.5.5
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Base de données}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsubsection{SQL Server 2008}
+
+% TODO: licence : ce choix car licence déjà achetée pour d'autres ?
+
+Le groupe Limagrain travaille dans un environnement Micosoft et utilisent leurs technologies et logiciels suivants : Windows, Internet Explorer, Outlook, etc.
+\\
+
+Ainsi une base de donnée de type Microsoft SQL Server, dans sa version 2008 R2, a été décidée pour héberger l'ensemble des données de l'application.
